--- a/templates/template-home.html
+++ b/templates/template-home.html
@@ -42,8 +42,9 @@
             <p>Rua Teste, Nº 123, Belo Horizonte, MG | (21) 99090-1010</p>
         </div>
     </div>
+    <script src="auth.js"></script>
     <script src="api-config.js"></script>
     <script src="api-communication.js"></script>
     <script src="template-home.js"></script>
-</body>
+    </body>
 </html>
