--- a/src/home-profissional.css
+++ b/src/home-profissional.css
@@ -168,4 +168,22 @@ body { font-family: 'Inter', Arial, sans-serif; background-color: var(--gray-bg)
 #profile-dropdown .dropdown-btn:last-child {
     border-bottom: none;
 }
-/* ...demais estilos... */
+
+
+.save-slot-btn {
+    background-color: #D1FAE5;
+}
+
+.save-slot-btn:hover {
+    background-color: #52f5a1;
+}
+
+
+.save-slot-btn.disabled-save {
+    background-color: #e5e7eb !important;
+    color: #9ca3af !important;
+    border-color: #e5e7eb !important;
+    cursor: not-allowed !important;
+    opacity: 0.7;
+    pointer-events: none;
+}
