--- a/src/atualizar-perfil.css
+++ b/src/atualizar-perfil.css
@@ -39,6 +39,18 @@ h1 {
     text-align: center;
 }
 
+textarea {
+    resize: none;
+    width: 100%;
+    padding: 0.75rem;
+    border: 1px solid var(--gray-border);
+    border-radius: 0.375rem;
+    font-size: 1rem;
+    color: #1F2937;
+    margin-top: 0.25rem;
+    box-sizing: border-box;
+}
+
 .profile-picture {
     display: flex;
     justify-content: center;
@@ -93,6 +105,7 @@ input[type="text"], input[type="file"] {
     font-size: 1rem;
     color: #1F2937;
     margin-top: 0.25rem;
+    box-sizing: border-box;
 }
 
 button[type="submit"] {
